--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 }
 
 .page-link {
-  color: #f3cc09;
+  color: #0004FD;
   margin-left: 5px;
   font-weight: bold;
 }
@@ -25,7 +25,7 @@ a:visited {
 }
 a:hover,
 a:focus {
-  color: #f3cc09;
+  color: #0004FD;
 }
 
 body {
